--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,47 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
   <display-name>MFwithFamily</display-name>
-  <!-- <servlet>
-  	<servlet-name>HelloServlet</servlet-name>
-  	<servlet-class>Controller.HelloServlet</servlet-class>
-  	<init-param>
-  		<param-name>id</param-name>
-  		<param-value>java-id</param-value>
-  	</init-param>
-  	<init-param>
-  		<param-name>pass</param-name>
-  		<param-value>java-pass</param-value>
-  	</init-param>
+  <servlet>
+  	<servlet-name>Home</servlet-name>
+  	<servlet-class>Controller.Home</servlet-class>
   </servlet>
-  <servlet-mapping>
-  	<servlet-name>HelloServlet</servlet-name>
-  	<url-pattern>/HelloServlet</url-pattern>
+  <servlet>
+  	<servlet-name>List</servlet-name>
+  	<servlet-class>Controller.List</servlet-class>
+  </servlet>
+  <!-- <servlet>
+  	<servlet-name>Balance</servlet-name>
+  	<jsp-file>/home.jsp</jsp-file>
+  </servlet> -->
+  <!-- <servlet-mapping>
+  	<servlet-name>Balance</servlet-name>
+  	<url-pattern>/balance</url-pattern>
   </servlet-mapping> -->
-  <context-param>
-  	<param-name>id</param-name>
-  	<param-value>java-context-id</param-value>
-  </context-param>
-  <context-param>
-  	<param-name>pass</param-name>
-  	<param-value>java-context-pass</param-value>
-  </context-param>
-  <listener>
-  	<listener-class>Controller.SetData</listener-class>
-  </listener>
-  <filter>
-  	<filter-name>SetData</filter-name>
-  	<filter-class>Controller.SetData</filter-class>
-  </filter>
-  <filter>
-  	<filter-name>GetData</filter-name>
-  	<filter-class>Controller.GetData</filter-class>
-  </filter>
-  <filter-mapping>
-  	<filter-name>SetData</filter-name>
-  	<servlet-name>HelloServlet</servlet-name>
-  </filter-mapping>
-  <filter-mapping>
-  	<filter-name>GetData</filter-name>
-  	<url-pattern>/*</url-pattern>
-  </filter-mapping>
+  <servlet-mapping>
+  	<servlet-name>Home</servlet-name>
+  	<url-pattern>/home</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>List</servlet-name>
+  	<url-pattern>/list</url-pattern>
+  </servlet-mapping>
 </web-app>
