--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
   <display-name>MFwithFamily</display-name>
-  <!-- <servlet>
+  <servlet>
   	<servlet-name>BalanceController</servlet-name>
   	<servlet-class>Controller.BalanceController</servlet-class>
-  </servlet> -->
+  </servlet>
   <servlet>
   	<servlet-name>HouseholdController</servlet-name>
   	<servlet-class>Controller.HouseholdController</servlet-class>
@@ -17,10 +17,14 @@
   	<servlet-name>SignUp</servlet-name>
   	<servlet-class>Controller.SignUp</servlet-class>
   </servlet>
-  <!-- <servlet-mapping>
+  <servlet>
+  	<servlet-name>Authentication</servlet-name>
+  	<servlet-class>Controller.Authentication</servlet-class>
+  </servlet>
+  <servlet-mapping>
   	<servlet-name>BalanceController</servlet-name>
   	<url-pattern>/balance</url-pattern>
-  </servlet-mapping> -->
+  </servlet-mapping>
   <servlet-mapping>
   	<servlet-name>HouseholdController</servlet-name>
   	<url-pattern>/household</url-pattern>
@@ -32,5 +36,9 @@
   <servlet-mapping>
   	<servlet-name>SignUp</servlet-name>
   	<url-pattern>/signUp</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>Authentication</servlet-name>
+  	<url-pattern>/auth</url-pattern>
   </servlet-mapping>
 </web-app>
