--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -21,6 +21,14 @@
   	<servlet-name>Authentication</servlet-name>
   	<servlet-class>Controller.Authentication</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>Login</servlet-name>
+  	<servlet-class>Controller.Login</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>Home</servlet-name>
+  	<servlet-class>Controller.Home</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>BalanceController</servlet-name>
   	<url-pattern>/balance</url-pattern>
@@ -40,5 +48,13 @@
   <servlet-mapping>
   	<servlet-name>Authentication</servlet-name>
   	<url-pattern>/auth</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>Login</servlet-name>
+  	<url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>Home</servlet-name>
+  	<url-pattern>/home</url-pattern>
   </servlet-mapping>
 </web-app>
