--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -47,6 +47,6 @@
   </servlet-mapping>
   <servlet-mapping>
   	<servlet-name>Login</servlet-name>
-  	<url-pattern>/login</url-pattern>
+  	<url-pattern>/</url-pattern>
   </servlet-mapping>
 </web-app>
