SendMail.java内を環境変数に置き換え

--- a/.env
+++ b/.env
@@ -1,6 +1,18 @@
-HEROKU_DB_USER=b3431fdd6c6422
-HEROKU_DB_URL='mysql://b3431fdd6c6422:5484b082@us-cdbr-iron-east-01.cleardb.net/heroku_ef3b6c8a0bd85cb?reconnect=true'
-HEROKU_DB_PASSWORD=5484b082
-SECRET_KEY=RJ7rw2UUIW9ljpflzP44dg==
-SENDGRID_PASSWORD=j9rpunrf3993
-SENDGRID_USERNAME=app167906357@heroku.com
+=== mf-family Config Vars
+CLEARDB_CYAN_URL:      mysql://bfc3584f68b32c:7e9f3b5e@us-cdbr-iron-east-01.cleardb.net/heroku_506eac80721721d?reconnect=true
+CLEARDB_DATABASE_URL:  mysql://b3431fdd6c6422:5484b082@us-cdbr-iron-east-01.cleardb.net/heroku_ef3b6c8a0bd85cb?reconnect=true
+DATABASE_URL:          mysql://b3431fdd6c6422:5484b082@us-cdbr-iron-east-01.cleardb.net/heroku_ef3b6c8a0bd85cb?reconnect=true
+HEROKU_DB_PASSWORD:    5484b082
+HEROKU_DB_URL:         mysql://b3431fdd6c6422:5484b082@us-cdbr-iron-east-01.cleardb.net/heroku_ef3b6c8a0bd85cb
+HEROKU_DB_USER:        b3431fdd6c6422
+IV_PARAMETER:          CI8F0CxNr6gcF5UVoT0RaQ==
+MAILGUN_API_KEY:       fe47e49c9540e7d868271d607381751c-0afbfc6c-4685dd4d
+MAILGUN_DOMAIN:        sandboxcc344b42ea404e4a9d8007c97e1c9ce6.mailgun.org
+MAILGUN_FROM_MAIL:     maeda.kanta@moneyforward.co.jp
+MAILGUN_PUBLIC_KEY:    pubkey-1364371ef90e94bc56d8cd6210edd7db
+MAILGUN_SMTP_LOGIN:    postmaster@sandboxcc344b42ea404e4a9d8007c97e1c9ce6.mailgun.org
+MAILGUN_SMTP_PASSWORD: 7c6734abc3a412da3210b55055f82f17-0afbfc6c-36667b69
+MAILGUN_SMTP_PORT:     587
+MAILGUN_SMTP_SERVER:   smtp.mailgun.org
+SECRET_KEY:            RJ7rw2UUIW9ljpflzP44dg==
+SENDGRID_API_KEY:      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
