--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
 		<artifactId>unirest-java</artifactId>
 		<version>1.4.9</version>
 	</dependency>
+	<dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.3.1</version>
+        <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
