--- a/.github/workflows/authomatic-pr.yml
+++ b/.github/workflows/authomatic-pr.yml
@@ -3,7 +3,7 @@ name: automatic-pr
 on:
   push:
     branches:
-      - automatic-pr
+      - release
 
 jobs:
   automatic-pr:
@@ -16,8 +16,8 @@ jobs:
           ruby-version: 2.6.x
       - name: Execute git-pr-release (release -> master)
         env:
-          GIT_PR_RELEASE_BRANCH_PRODUCTION: release
-          GIT_PR_RELEASE_BRANCH_STAGING: automatic-pr
+          GIT_PR_RELEASE_BRANCH_PRODUCTION: master
+          GIT_PR_RELEASE_BRANCH_STAGING: release
           GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GIT_PR_RELEASE_TEMPLATE: '.github/git-pr-release.erb'
         run: |
